# scopus-utils

./: LICENSE  pyproject.toml  updater.py
cli/: attck.py  aws.py  products.py  sentinel.py  sigma.py
cli/utils/: attck.py  sentinel.py  sigma.py
cli/utils/aws/: crud.py  loader.py  nodes.py
cli/utils/neograph/: crud.py  nodes.py
detections/sentinel/: sentinel.md
rules/sigma/: sigma.md
utils/: attck.py  sigma.py
utils/neograph/: crud.py  nodes.py
